# spinner

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
.cache/clangd/index/: main.cpp.0919C6A92C300715.idx  main.cpp.0CF7D5C6188188E8.idx
src/: main.cpp  utils.cpp
src/headers/: shaders.h  utils.h
src/shaders/: aio.frag  aio.vert  refl.frag  refl.vert  shaders.cpp  triangle.frag  triangle.vert
